<resources>

        <string name="app_name">Atini App</string>
        <string name="profile_picture">Profile Picture</string>
        <string name="upload">Upload</string>
        <string name="profile_image">Profile image</string>
        <string name="my_ads">My ads</string>
        <string name="favorites">Favorites</string>
        <string name="followed_users">Followed users</string>
        <string name="my_reviews">My reviews</string>
        <string name="settings">Settings</string>
        <string name="logout">Logout</string>
        <string name="prompt_status">Status</string>
        <string name="prompt_category">Category</string>
</resources>